# spec-ui

./: .gitignore  CLAUDE.md  README.md  components.json  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
scripts/: sync-version.mjs
src/: index.css  main.tsx  routeTree.gen.ts  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  lib.rs  main.rs  process_utils.rs
src-tauri/src/commands/: app_settings.rs  coverage.rs  file_operations.rs  frontmatter.rs  mod.rs  search.rs  spec_analyzer.rs  watcher.rs
src-tauri/src/models/: coverage.rs  file_node.rs  frontmatter.rs  mod.rs  spec_analyzer.rs
src/__tests__/hooks/: use-progress-parser.test.ts
src/components/editor/: editor-panel.tsx  (+7 more)
src/hooks/: use-active-project.ts  use-auto-save.ts  use-auto-update-check.ts  use-close-tab-and-select.ts  use-compact-window.ts  use-coverage-cache.ts  use-file-operations.ts  use-file-watcher.ts  use-keyboard-shortcuts.ts  use-markdown-processor.tsx  use-progress-parser.ts  use-spec-analyzer-cache.ts  use-spec-analyzer.ts  use-theme.ts  use-window-state.ts  use-workspace-persistence.ts
src/i18n/: en.json  index.ts  zh-TW.json
src/lib/: localized-notes.ts
src/routes/: __root.tsx  editor.tsx  index.tsx  settings.tsx
src/stores/: coverage-store.ts  editor-store.ts  search-store.ts  settings-store.ts  spec-analyzer-store.ts  workspace-store.ts
src/styles/: markdown-preview.css
src/types/: coverage-types.ts  file-types.ts  spec-analyzer-types.ts
(+40 files in other folders)
